# deckforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.render  FEATURE_AUDIT.md  LICENSE  MARKET_RESEARCH.md  Procfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  server.json
.github/: CONTRIBUTING.md  social-preview-spec.md
.github/ISSUE_TEMPLATE/: bug_report.yml  early-access.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  publish-sdk.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_create_users_and_api_keys.py  002_create_decks_and_jobs.py  003_batch_webhook_tables.py  004_billing_tables.py  005_payment_events.py
demos/: VALIDATION_REPORT.md
demos/bar_chart_demo/: ir.json
demos/board-update/: prompt.txt
demos/line_chart_demo/: ir.json
demos/mckinsey-strategy/: prompt.txt
demos/mixed_demo/: ir.json
demos/output/: bar_chart_demo.pptx  board-update.pptx  (+8 more)
docs/: DEPLOY_FLYIO.md  DEPLOY_RENDER.md  MCP_REGISTRY_PUBLISH.md  STRIPE_PRODUCTS.md  deployment.md  generate-powerpoint-from-json-or-prompt-api-mcp.md  npm-publish.md  unkey-setup.md  x402-setup.md
landing/: index.html  llms.txt  styles.css  vercel.json
launch/: MARKET_INTELLIGENCE.md  cold-outreach-templates.md  community-responses.md  devto-article.md  freelance-gigs.md  linkedin-posts.md  mcp-directory-submissions.md  payment-links.md  product-hunt.md  reddit-claudeai.md  sales-page.html  show-hn.md  x-twitter-threads.md
mcp-config/: claude_desktop_config.json
quality/: __init__.py  ppteval.py  score_demos.py
scripts/: bootstrap-db.sh  generate_chart_demos.py  generate_demos.py  render-entrypoint.sh  setup-stripe.py  setup_deckforge_db.py  smoke-test.sh  test_content_pipeline.py  validate-demos.py  verify-docker.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
tasks/: prd-production-launch.md
tests/: conftest.py  test_analytics.py  test_auth_unkey.py  test_batch_webhooks.py  test_billing.py  test_compose_board_update.py  test_compose_exit_memo.py  test_compose_ic_memo.py  test_compose_lp_quarterly.py  test_compose_pitch_deck.py  test_compose_portfolio_review.py  test_compose_teaser.py  test_discovery.py  test_mcp_server.py  test_onboarding.py  test_ppteval_harness.py  test_qa_pipeline.py  test_x402.py
(+376 files in other folders)
